# DistributedProcesses

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  initial.tex  run_tests.sh
docs/: image.pdf_tex  initial.tex  tin.eps
src/: CMakeLists.txt
src/admin/: Admin.cpp  Admin.h  AdminServerConnection.cpp  AdminServerConnection.h  CMakeLists.txt  Main.cpp  Worker.cpp  Worker.h  adminServerConnection.cpp  adminServerConnection.h  main.cpp  worker.h
src/common/: CMakeLists.txt  Connection.cpp  Connection.h  Log.h  ProcessImage.cpp  ProcessImage.h  connection.cpp  connection.h
src/server/: Admin.cpp  Admin.h  CMakeLists.txt  Main.cpp  Server.cpp  Server.h  Worker.cpp  Worker.h  main.cpp
src/worker/: CMakeLists.txt  Main.cpp  Process.cpp  Process.h  Worker.cpp  Worker.h
tests/: run_acceptance_tests.py
wireshark-plugin/: README.rd  pRoman.lua
